# Curso_Kafka_Cpp

./: .gitignore  Dockerfile  README.md  docker-compose.yml  launch.json
hello_avro_cpp/: CMakeLists.txt  README.md  docker-compose.debug.yml
hello_avro_cpp/source/: Application.hpp  main.cpp
hello_avro_cpp/source/Bitcoin/: ISerdes.hpp  Serdes.hpp  Trade.cpp  Trade.hpp  schemaTrade.json
hello_avro_cpp/source/utils/: Logger.hpp  sd_avro.hpp
hello_libkafka_cpp/: CMakeLists.txt
hello_libkafka_cpp/source/: main.cpp
hello_libserdes_cpp/: CMakeLists.txt  docker-compose.debug.yml
hello_libserdes_cpp/source/: main.cpp
